Made sidebar locked, added modified and new icons (icons by Golui).

--- a/templates/fractal/language/en-GB/en-GB.tpl_fractal.ini
+++ b/templates/fractal/language/en-GB/en-GB.tpl_fractal.ini
@@ -11,7 +11,7 @@ TMPL_FRACTAL_MORE="More"
 TMPL_FRACTAL_STATS="Stats"
 TMPL_FRACTAL_OTHER="Other"
 TMPL_FRACTAL_UCP="User Control Panel"
-TMPL_FRACTAL_ACP="phpBB Administration Control Panel"
+TMPL_FRACTAL_ACP="phpBB ACP"
 TMPL_FRACTAL_JOOMLA_ADMIN="Joomla! Administration"
 TMPL_FRACTAL_NEW_ARTICLE="New Article"
 TMPL_FRACTAL_POSTS="View your posts"
