Handled disabled cookies in browser + small changes in language strings.

--- a/templates/fractal/language/en-GB/en-GB.tpl_fractal.ini
+++ b/templates/fractal/language/en-GB/en-GB.tpl_fractal.ini
@@ -1,19 +1,4 @@
-TMPL_FRACTAL_BY="by %s"
-TMPL_FRACTAL_OLDER="Older"
-TMPL_FRACTAL_NEWER="Newer"
-TMPL_FRACTAL_NOTIFICATIONS="Notifications"
-TMPL_FRACTAL_FRIENDS="Friends"
-TMPL_FRACTAL_NO_FRIENDS="You have nobody on your friendlist."
-TMPL_FRACTAL_PROFILE="Profile"
-TMPL_FRACTAL_COINS="Coins"
-TMPL_FRACTAL_TIME_PLAYED="Time played"
-TMPL_FRACTAL_MORE="More"
-TMPL_FRACTAL_STATS="Stats"
-TMPL_FRACTAL_OTHER="Other"
-TMPL_FRACTAL_UCP="User Control Panel"
-TMPL_FRACTAL_ACP="phpBB ACP"
-TMPL_FRACTAL_JOOMLA_ADMIN="Joomla! Administration"
-TMPL_FRACTAL_NEW_ARTICLE="New Article"
-TMPL_FRACTAL_POSTS="View your posts"
-TMPL_FRACTAL_DONATE="Make a donation"
-TMPL_FRACTAL_LOGOUT="Logout"
+TPL_FRACTAL_BY="by %s"
+TPL_FRACTAL_OLDER="Older"
+TPL_FRACTAL_NEWER="Newer"
+TPL_FRACTAL_XML_DESCRIPTION="Template for Fractal Network website"
