Improved backwards compatibility and added info about outdated browser.

--- a/templates/fractal/language/en-GB/en-GB.tpl_fractal.ini
+++ b/templates/fractal/language/en-GB/en-GB.tpl_fractal.ini
@@ -2,3 +2,5 @@ TPL_FRACTAL_BY="by %s"
 TPL_FRACTAL_OLDER="Older"
 TPL_FRACTAL_NEWER="Newer"
 TPL_FRACTAL_XML_DESCRIPTION="Template for Fractal Network website"
+TPL_FRACTAL_OLD_BROWSER="It seems that you have outdated browser and the site may not work properly. Please update it to get all of this sites features. If you use Internet Explorer on Windows XP please install other browser."
+TPL_FRACTAL_COOKIE_INFO="This site uses cookies blah blah. (To be implemented)"
