Improved support for possible other languages in the future.

--- a/templates/nexus/language/en-GB/en-GB.tpl_nexus.ini
+++ b/templates/nexus/language/en-GB/en-GB.tpl_nexus.ini
@@ -1,6 +1,8 @@
 TPL_NEXUS_BY="by %s"
 TPL_NEXUS_OLDER="Older"
 TPL_NEXUS_NEWER="Newer"
+TPL_NEXUS_TITLE="the Fractal Network"
 TPL_NEXUS_XML_DESCRIPTION="Template for Project Nexus website"
 TPL_NEXUS_OLD_BROWSER="It seems that you have outdated browser and the site may not work properly. Please update it to get all of the features this site offers. If you use Internet Explorer on Windows XP or older please install other browser."
 TPL_NEXUS_COOKIE_INFO="We use cookies to improve your experience with the site. If you want to disable them please refer to your web browser's documentation."
+TPL_NEXUS_COPYRIGHT="Copyright (C) 2014. The design is property of the Fractal Team and should not be copied. This site is powered by <a href="http://joomla.org">Joomla!</a> CMS and <a href="http://www.phpbb.com">phpBB</a> forum."
